--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ h1{
 .dd{
     border: 5px;
     border-color: solid salmon;
-    height: 300px;
-    width: 400px;
+    height: 500px;
+    width: 600px;
+    display: block;
+    margin: auto;
+    margin: auto;
 }
